# dispatch_sim

./: .gitignore  MANIFEST.in  README.md  dispatch_sim.code-workspace  docker-compose.yml  pyproject.toml  setup.cfg
data/test/: test_dispatch_orders.json  test_sim_log.txt
dispatch_sim/: dispatcher.py  event.py  order.py  sim.py
test/: test_dispatcher.py  test_order.py  test_sim.py
