[build-system]
requires = [
    "setuptools>=51.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# mypy per-module options:
#[[tool.mypy.overrides]]
#module = "mycode.foo.*"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
]
testpaths = [
    "test",
]
#python_classes = ["Test"]
#python_functions = ["test"]

norecursedirs = ["test/data"]
