[build-system]
requires = [
    "setuptools>=51.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# mypy per-module options:
[[tool.mypy.overrides]]
#module = "dispatch_sim.order"
module = "jsonschema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "test"
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--cov=dispatch_sim"
norecursedirs = ["test/data"]
python_files = [
    "test_*.py",
]
testpaths = [
    "test",
]
#python_classes = ["Test"]
#python_functions = ["test"]
