[bdist_wheel]
universal = 1

[metadata]
name = dispatch_sim
description = Dispatch simulation code exam for ghost kitchens
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Klein
author_email = telamonian@hotmail.com
zip_safe = False
license_file = LICENSE
platforms = any
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    jsonschema
tests_require =
    pytest

# [options.entry_points]
# console_scripts =
#     chaos = chaostoolkit.__main__:cli

[tool:pytest]
testpaths = tests

# python_files =
#     test_*.py
#     *_test.py
#     tests.py
# addopts =
#     -v
#     -rxs
#     --cov chaostoolkit
#     --cov-report term-missing:skip-covered
#     --cov-report xml
#     -p no:warnings
