[bdist_wheel]
universal = 1

[metadata]
name = dispatch_sim
description = Dispatch simulation code exam for ghost kitchens
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Klein
author_email = telamonian@hotmail.com
zip_safe = False
license_file = LICENSE
platforms = any
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    jsonschema

[options.extras_require]
test =
  mypy
  pytest

[options.entry_points]
console_scripts =
    dispatch_sim = dispatch_sim.sim:main

# [tool:pytest]
# testpaths = dispatch_sim/test

# python_files =
#     # test_*.py
#     test_order.py

# addopts =
#     -v
#     -rxs
#     --cov chaostoolkit
#     --cov-report term-missing:skip-covered
#     --cov-report xml
#     -p no:warnings
